--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,8 +1,5 @@
-name = "waf-payload-decoder"
+name = "gcs-waf-payload-decoder"
 main = "./src/index.ts"
 compatibility_date = "2025-07-30"
 account_id = "2d4a0681682a0636adb204232e94b6f0"
 
-[[r2_buckets]]
-binding = "WAF_LOGS_BUCKET"
-bucket_name = "cloudflare-managed-9ce07808"
